# qc-intel

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  analyze.py  docker-compose.yml  pyproject.toml  railway.toml
.github/workflows/: test.yml
api/: deps.py  main.py  models.py
api/routers/: charts.py  data.py  intelligence.py  metrics.py  reports.py
context/: bge-m3-upgrade-plan.md  inventory-approach.md  kaggle-backlog.md  platform-research.md  progress.md  quickcommerceapi_research.md  shaping.md  ws3-plan.md  ws4-shaping.md
eval/: eval_normalization.py  generate_gemini_ground_truth.py
kaggle/: embed_and_rerank.py  kernel-metadata.json
kaggle/llm-judge/: kernel-metadata.json  llm_judge.py
reports/: free-proxy-research.md  instamart-scraping-research.md  llm-judge-cleanup.md
scripts/: batch_scrape.py  fast_instamart_night.py  fast_night_scrape.py  fix_categories.py  scheduler.py
scripts/experiments/: instamart_capture_test.py  single_scrape_dump.py  validate_inventory.py  zepto_atc_test.py  zepto_bff_capture.py  zepto_bff_direct.py  zepto_direct_api.py  zepto_extract_hydration.py  zepto_find_bff_format.py  (+2 more)
src/: orchestrator.py
tests/: conftest.py  test_analyst.py  test_api.py  test_catalog_export.py  test_config.py  test_db.py  test_kaggle_client.py  test_kaggle_llm_judge.py  test_metrics_api.py  test_models.py  test_normalizer.py  test_orchestrator.py  test_sales_service.py  test_scraper_agents.py  test_scraper_parsers.py  test_scraper_service.py  test_unit_normalizer.py
web/: package.json  pnpm-lock.yaml
(+68 files in other folders)
