[project]
name = "qc-intel"
version = "0.1.0"
description = "Quick commerce intelligence platform — scrape, estimate, normalize, analyze"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.0",
    "mcp>=1.0",
    "sentence-transformers",
    "numpy",
    "scikit-learn",
    "pydantic>=2.0",
    "pydantic-settings",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = ["eval/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
